# steel-sim

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  run_tests.ps1  run_tests.sh
.github/workflows/: full-gate.yml
docs/: index.html
docs/decisions/: 0001-language-and-performance.md  0002-visualization-and-ux.md  0003-test-execution-policy.md  0004-unfreeze-nonlinear-diffusivity.md  0005-bainite-cross-composition-stays-per-steel.md  0006-sulfide-capacity-holdout-validated.md  0007-phosphorus-partition-holdout-bias-map.md  0008-phosphorus-partition-second-slag-system.md  0009-sulfur-partition-conversion-probe.md  0010-phosphorus-dbtt-coverage-mechanism-no-tooth.md
docs/handoffs/: ipykernel-shell-wedge-rearm.patch  notebook-kernel-wedge-upstream-issue.md  notebook-kernel-wedge.md
docs/memory/: MEMORY.md  README.md  b3-front-end-validation-built.md  bainite-anchoring-probe.md  carbon-carry-in-built.md  carburize-diffusivity-source.md  commit-push-end-of-batch.md  consequences-app-built.md  cross-composition-validation.md  deox-recovery-built.md  di-crosscheck-source.md  f1-ellingham-built.md  f4-casting-built.md  f4-slice2-solidification-built.md  ferrite-bay-source.md  fracture-coupling-built.md  full-chain-capstone-built.md  gallery-page.md  game-slice0-built.md  game-slice1-built.md  game-slice2-built.md  gas-porosity-built.md  grain-growth-source.md  healy-lp-validation-built.md  heat-state-spine-built.md  historical-impurity-pedagogy.md  hollomon-jaffe-tempering-source.md  hot-tear-built.md  hydrogen-flaking-built.md  impurity-consequence-built.md  ladle-f3-built.md  making-app-built.md  making-notebook-built.md  martemper.md  matcalc-mc-fe-database-source.md  maynier-hardness-source.md  mixed-temper-next.md  next-directions-catalogue.md  notebook-kernel-wedge-rootcause.md  notebook-surgical-insertion.md  (+20 more)
docs/plans/: dazzling-mixing-honey.md  fracture-coupling.md  game.md  next-directions.md  steady-puzzling-axolotl.md  steel-making.md  steel-production.md
engines/: __init__.py
engines/diffusion/: CONTRACT.md  README.md  __init__.py  diffusion1d.py
engines/diffusion/tests/: test_conservation.py  test_erfc.py  test_nonlinear_d.py  test_robin_heat.py  test_source.py  test_stability.py  test_time_order.py  test_variable_d.py
game/: README.md  __init__.py  app_game.py  choices.py  demo_game.py  demo_game_methods.py  figures.py  knobs.py  postmortem.py  presets.py  state.py  teach.py
game/tests/: test_game_app_smoke.py  test_game_choices.py  test_game_figures.py  test_game_firewall.py  test_game_golden_run.py  test_game_knobs.py  test_game_labels.py  test_game_losability.py  test_game_methods.py  test_game_state.py
steel/: README.md  __init__.py  app.py  app_consequences.py  app_making.py  austemper.py  calphad_backend.py  calphad_reference.py  carburize.py  casting.py  cct_validation.py  cooling.py  demo_austemper.py  demo_bainite.py  demo_calphad.py  demo_capstone.py  demo_carbon_carry_in.py  demo_carburize.py  demo_casting.py  demo_cct_validation.py  demo_deox_recovery.py  demo_design.py  demo_four_curves.py  demo_fracture.py  demo_gas_porosity.py  demo_grain.py  demo_grain_morphology.py  demo_heat_state.py  demo_hot_tear.py  demo_hydrogen_flaking.py  demo_ideal_diameter.py  demo_impurity_window.py  demo_jominy.py  demo_ladle.py  demo_martemper.py  demo_p_segregation_dbtt.py  demo_peritectic.py  demo_reduction.py  demo_refining.py  demo_residual.py  (+50 more)
steel/tests/: _notebook_exec.py  test_app.py  test_app_consequences.py  test_app_making.py  test_austemper.py  test_bainite.py  test_calphad.py  test_carburize.py  test_casting.py  test_cct_validation.py  test_cooling.py  test_demo_austemper.py  test_demo_bainite.py  test_demo_calphad.py  test_demo_capstone.py  test_demo_carbon_carry_in.py  test_demo_carburize.py  test_demo_casting.py  test_demo_cct_validation.py  test_demo_deox_recovery.py  test_demo_design.py  test_demo_four_curves.py  test_demo_gas_porosity.py  test_demo_grain.py  test_demo_grain_morphology.py  test_demo_heat_state.py  test_demo_hydrogen_flaking.py  test_demo_ideal_diameter.py  test_demo_impurity_window.py  test_demo_jominy.py  test_demo_ladle.py  test_demo_martemper.py  test_demo_p_segregation_dbtt.py  test_demo_peritectic.py  test_demo_reduction.py  test_demo_refining.py  test_demo_residual.py  test_demo_slag.py  test_demo_slag_ls_validation.py  test_demo_slag_validation.py  (+47 more)
